# recomposition

./: .rustfmt.toml  .taplo.toml  Cargo.toml
src/: filter.rs  lib.rs  sort.rs
